notes and problems in the book

--- a/PointersOnC/Zettle/01.006 How to Comment out code in C.md
+++ b/PointersOnC/Zettle/01.006 How to Comment out code in C.md
@@ -6,7 +6,7 @@ status: #quick
 
 to comment out code it is not a good idea to use the normal way of commenting code with `*/` which is used for normal comments 
 the reason is because if you have any other comments in the block of code it will simply not work
-its better to do somthing like this
+its better to do something like this with #if and #endif
 ```
 #if 0
 	statements(aka.your.code)
