--- a/PointersOnC/Zettle/01.008 Main Function.md
+++ b/PointersOnC/Zettle/01.008 Main Function.md
@@ -4,4 +4,4 @@ status: #quick
 # 01.008 Main Function
 ---
 
-every c program need a main function 
+every c program need a main function this is where the execution starts.
