--- a/PointersOnC/Zettle/01.012 scanf function.md
+++ b/PointersOnC/Zettle/01.012 scanf function.md
@@ -11,5 +11,7 @@ scanf only reads as far as if had to when converting input values
 so that means that the remainder of the line that contained the last value will still be "out there" waiting to be read 
 it could contain just the end of the new line or other characters 
 
-the author mentions that a [[while loop]] he made it to read and and discards the remaining characters to prevent them from being interpreted  as the first line of data 
-`(char = getchar()) != EOF && ch != '\n'`
+more here [[01.014 while loop and eof example]]
+
+[[01.014 EOF]] 
+
