--- a/PointersOnC/Zettle/01.014 while loop and eof example.md
+++ b/PointersOnC/Zettle/01.014 while loop and eof example.md
@@ -5,7 +5,8 @@ status: #quick
 ---
 
 the author mentions that a [[while loop]] he made it to read and and discards the remaining characters to prevent them from being interpreted  as the first line of data 
-`(char = getchar()) != EOF && ch != '\n'`
+`while( (char = getchar()) != EOF && ch != '\n')`
 the *getchar* read a  single character from the standard input and returns a value  
-the value that is returned to *getchar* is assigned to the **ch** varible 
-and if there are no more characters
+the value that is returned to *getchar* is assigned to the **ch** varible and is compared to EOF
+the parentheses enclosed in the assignment ensure that is done before the comparing happens. Otherwise ch is compared to a newline, again, the loop stops if they are found to be equal 
+this means that the loop discards the remaining characters on the current input lined
